[package]
name = "my-pinocchio-cpi"
version = "0.1.0"
edition = "2021"

[lints.rust]
unexpected_cfgs = "allow"

[lib]
crate-type = ["cdylib", "lib"]


[dependencies]
pinocchio = "0.9.2"
thiserror = { version = "1.0", default-features = false }
num-derive = "0.4"
num-traits = { version = "0.2", default-features = false }
